--- a/templates/example.html
+++ b/templates/example.html
@@ -16,7 +16,7 @@
         <div class="containter col-sm-4">
           <div style=" margin: 40% 0 0 0" class="card">
             <div class="card-body">
-              <img style="width:80%;height:50%; margin: 5% 0 0 5% " src="etax.png" alt="E-tax logo"></img>
+              <img style="width:80%;height:50%; margin: 5% 0 0 5% " src="/static/img/etax.png" alt="E-tax logo"></img>
               <h1 style="text-align: center">Log In To E-Tax</h1>
 
     <form>
