--- a/templates/example.html
+++ b/templates/example.html
@@ -10,13 +10,13 @@
 
     <title>Hello, world!</title>
   </head>
-  <body style="background-color: rgb(11, 189, 255)">
+  <body style="background-color: #0E83DD">
     <div class ="container">
       <div class="row justify-content-md-center">
         <div class="containter col-sm-4">
           <div style=" margin: 40% 0 0 0" class="card">
             <div class="card-body">
-              <img style="width:80%;height:50%; margin: 5% 0 0 5% " src="/static/img/etax.png" alt="E-tax logo"></img>
+              <img style="width:80%;height:50%; margin: 5% 0 0 5% " src="etax.png" alt="E-tax logo"></img>
               <h1 style="text-align: center">Log In To E-Tax</h1>
 
     <form>
