--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -21,7 +21,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/siderbar.css">
+    <link rel="stylesheet" href="static/css/sidebar.css">
   </head>
   <body>
     <div class="wrapper">
