--- a/templates/indexOriginal.html
+++ b/templates/indexOriginal.html
@@ -221,8 +221,15 @@
       </ul>
     </div>
   </nav>
+  
+  
+  
+  
   <div class="content-wrapper">
+  
     <div class="container-fluid">
+    
+    
       <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
@@ -230,7 +237,13 @@
         </li>
         <li class="breadcrumb-item active">My Dashboard</li>
       </ol>
-      <!-- Icon Cards-->
+      
+      
+      <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+      <!-- Icon Cards Dashboard-->
+      <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->    
+      
+      
       <div class="row">
         <div class="col-xl-3 col-sm-6 mb-3">
           <div class="card text-white bg-primary o-hidden h-100">
@@ -297,7 +310,13 @@
           </div>
         </div>
       </div>
+      
+      
+      
+      
+      <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
       <!-- Area Chart Example-->
+      <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
       <div class="card mb-3">
         <div class="card-header">
           <i class="fa fa-area-chart"></i> Area Chart Example</div>
@@ -306,6 +325,7 @@
         </div>
         <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
       </div>
+      
       <div class="row">
         <div class="col-lg-8">
           <!-- Example Bar Chart Card-->
@@ -393,6 +413,7 @@
               </div>
               <div class="card-footer small text-muted">Posted 32 mins ago</div>
             </div>
+            
             <!-- Example Social Card-->
             <div class="card mb-3">
               <a href="#">
@@ -585,7 +606,12 @@
           </div>
         </div>
       </div>
-      <!-- Example DataTables Card-->
+      
+      
+      <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+	  <!-- Example DataTables Card-->
+      <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+      
       <div class="card mb-3">
         <div class="card-header">
           <i class="fa fa-table"></i> Data Table Example</div>
@@ -1076,6 +1102,17 @@
         <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
       </div>
     </div>
+    <!-- END OF INSIDE STUFF -->
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
     <!-- /.container-fluid-->
     <!-- /.content-wrapper-->
     <footer class="sticky-footer">
@@ -1122,6 +1159,9 @@
     <script src="js/sb-admin-datatables.min.js"></script>
     <script src="js/sb-admin-charts.min.js"></script>
   </div>
+  
+  
+  
 </body>
 
 </html>
